2007-03-11  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_ReportDialog.py: don't catch all exceptions - we won't
	  get a traceback.

2007-03-11  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0000950: include the date in the reference 
	  sections of the narrative web site

2007-03-09  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Support new note API
	* src/ReportBase/_ReportUtils.py: Support new note API

2007-03-08  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomParse.py
	* src/GrampsDbUtils/_GedcomChar.py
	* src/GrampsDbUtils/_GedcomLex.py

2007-03-06  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/AncestorChart.py: Deleted - just an old version of 
	  AncestorChart2.py

2007-03-06  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py:
	* src/ReportBase/_ReportUtils.py:
	Fix 0000956: Event order within GRAMPS not replicated in web report

2007-03-06  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomParse.py (GedcomParser.__parse_record): fix note handling
	* src/Editors/_EditFamily.py (EditFamily.save): disable data changed warning
	when saving the data - we know that it changed.

2007-03-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Fix 0000954: e-mail address causes Narrative
	  Web plugin to generate bad links

2007-03-05  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: support for close button on filter sidebar
	* src/DisplayModels/_BaseModel.py: support for marker coloring
	* src/DisplayModels/_FamilyModel.py: support for marker coloring
	* src/PageView.py: support for marker coloring
	* src/Filters/SideBar/_SidebarFilter.py: provide close button
	* src/Filters/SideBar/_PersonSidebarFilter.py: cleanup

2007-03-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: Fix doc init.
	  
2007-03-05  Brian Matherly  <brian@gramps-project.org>