@@ -1,3 +1,11 @@
+2007-03-13  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
+	* src/RelLib/_Note.py: import const from MarkupText module
+	* src/MarkupText.py: use actions instead of widgets on the interface;
+	new helper functions
+	* src/Editors/_EditNote.py: move widgets out to glade; implement new
+	MarkupText buffer interface; use uimanager/toolbar for formatting
+	* src/glade/gramps.glade: edit_note update
+
 2007-03-11  Brian Matherly  <brian@gramps-project.org>
 	* src/ReportBase/_ReportDialog.py: don't catch all exceptions - we won't
 	  get a traceback.
